RESOLVED FIXED275435
UI process crash when network process connection request arrives before settings have been initialized
https://bugs.webkit.org/show_bug.cgi?id=275435
Summary UI process crash when network process connection request arrives before setti...
Kimmo Kinnunen
Reported 2024-06-13 05:11:38 PDT
UI process crash when network process connection request arrives before settings have been initialized
Attachments
Kimmo Kinnunen
Comment 1 2024-06-13 05:15:21 PDT
Kimmo Kinnunen
Comment 2 2024-06-13 05:30:46 PDT
EWS
Comment 3 2024-06-14 10:23:59 PDT
Committed 280022@main (5554cf00d1f4): <https://commits.webkit.org/280022@main> Reviewed commits have been landed. Closing PR #29782 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.