Cherry-pick 280022@main (5554cf00d1f4). https://bugs.webkit.org/show_bug.cgi?id=275435

UI process crash when network process connection request arrives before settings have been initialized
    https://bugs.webkit.org/show_bug.cgi?id=275435
    rdar://129587532

    Reviewed by Cameron McCormack.

    Mark sendSync of GetNetworkProcessConnection as
    MaintainOrderingWithAsyncMessages so that previous messages are
    guaranteed to be delivered. The previous messages might initialize the
    network process settings that are needed to establish the connection.

    * Source/WebKit/WebProcess/WebProcess.cpp:
    (WebKit::getNetworkProcessConnection):

    Canonical link: https://commits.webkit.org/280022@main

Canonical link: https://commits.webkit.org/274313.362@webkitglib/2.44